--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
